--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "quiz-game",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "Викторина с MongoDB",
+  "main": "api/server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node api/server.js",
+    "dev": "node api/server.js",
+    "vercel-build": "echo 'No build step required'"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongodb": "^6.8.0", 
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "mongodb": "^6.8.0"
   },
   "engines": {
     "node": "20.x"
