--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "quiz-game",
   "version": "1.0.0",
-  "description": "Викторина с MongoDB",
-  "main": "api/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node api/server.js",
-    "dev": "node api/server.js",
-    "vercel-build": "echo 'No build step required'"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "vercel-build": "echo 'Vercel build complete'"
   },
   "dependencies": {
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
-    "mongodb": "^6.8.0"
+    "mongodb": "^6.0.0"
   },
-  "engines": {
-    "node": "20.x"
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
