--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
   "name": "quiz-game",
-  "version": "1.0.0",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "vercel-build": "echo 'Vercel build complete'"
+    "start": "node server.js"
   },
   "dependencies": {
-    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "mongodb": "^6.0.0"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+  "engines": {
+    "node": ">=18"
   }
 }
