--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,21 @@
 node_modules/
-.yarn/
-.yarn.lock
-.pnp.*
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.local.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-coverage/
-.nyc_output
-dist/
-build/
-.out/
-.next/
 .DS_Store
 Thumbs.db
-Desktop.ini
 .vscode/
 .idea/
 *.iws
 *.iml
 *.ipr
-.atomic_design
-.vercel/
+.env
 .env.local
+.vercel/
+dist/
+build/
+.out/
+.next/
+coverage/
+.vercel
 .env*.local
