--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "quiz-game",
+  "name": "quiz-game-vercel",
+  "version": "1.0.0",
+  "description": "Викторина с хранением данных в памяти для Vercel",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "vercel-build": "echo 'Vercel build complete'"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongodb": "^6.0.0"
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=14.0.0"
   }
 }
