--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "quiz-game-vercel",
   "version": "1.0.0",
-  "description": "Викторина с хранением данных в памяти для Vercel",
+  "description": "ывавпви",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "vercel-build": "echo 'Vercel build complete'"
+    "vercel-build": "echo 'No build step required'"
   },
   "dependencies": {
     "express": "^4.18.2"
@@ -15,6 +15,6 @@
     "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "24.x"
   }
 }
